Sun Nov 14 06:30:47 GMT 2004  Olly Betts <olly@survex.com>

	* xapian.i: Wrapped Xapian::Weight and subclasses (compiles, but
	  otherwise totally untested).  Nothing special is done about
	  directors, so deriving your own Weight subclass in the scripting
	  language probably won't currently work.

Wed Nov 10 03:32:23 GMT 2004  Olly Betts <olly@survex.com>

	* README: Improved a bit.

Wed Nov 10 03:24:08 GMT 2004  Olly Betts <olly@survex.com>

	* xapian.i: %name is deprecated, so use %rename instead.  This also
	  works around a bug currently in SWIG CVS HEAD.

Wed Nov 10 01:47:33 GMT 2004  Olly Betts <olly@survex.com>

	* xapian.i: Second argument to Document::add_posting() isn't optional.

Tue Nov 09 03:06:56 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac,csharp/Makefile.am,guile/Makefile.am,
	  java/native/Makefile.am,php4/Makefile.am,python/Makefile.am,
	  tcl8/Makefile.am: We now get -AA or -std strict_ansi from
	  xapian-config, so we don't need to probe for them ourselves.

Sat Nov 06 16:19:30 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac: Check GXX instead of GCC when deciding whether to pass
	  GCC specific warning flags.

Sat Nov 06 13:04:52 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac: Reinstated the check that the bindings version matches
	  the version of the xapian library.  It was added in 0.8.2, but
	  accidentally removed in 0.8.3.

Sat Nov 06 12:44:40 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac: Protect tcl header version test by prepending x to
	  both the strings being tested.

Tue Nov 02 05:59:54 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac: Removed pointless probe for a C compiler.

Tue Nov 02 05:54:45 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac: Require SWIG 1.3.22 (for guile).

Sat Oct 30 19:51:10 BST 2004  Olly Betts <olly@survex.com>

	* csharp/Makefile.am: Contents of xxx_SOURCES must be literal.

Thu Oct 28 04:45:15 BST 2004  Olly Betts <olly@survex.com>
