@@ -28,6 +28,6 @@ BUILT_SOURCES = xapian_wrap.cc php_xapian.h
 
 # Need -I. since util.i is generated by configure.
 xapian_wrap.cc php_xapian.h xapian.php: ../xapian.i util.i extra.i
-	$(SWIG) -I/usr/include -I. -I$(srcdir) $(XAPIAN_CXXFLAGS) -c++ -php4 -noproxy -o xapian_wrap.cc $(srcdir)/../xapian.i
+	$(SWIG) -I. -I$(srcdir) @SWIG_FLAGS@ -c++ -php4 -noproxy -o xapian_wrap.cc $(srcdir)/../xapian.i
 
 CLEANFILES = $(BUILT_SOURCES) xapian.php
